# torrijas

./: CMakeLists.txt  LICENSE.txt  README.md
torrijas/: CMakeLists.txt
torrijas-template/: CMakeLists.txt
torrijas-template/source/: main.cpp
torrijas-test/: CMakeLists.txt
torrijas-test/images/: credits.txt
torrijas-test/include/: actionstest.h  boundingboxtest.h  eyesbenchmark.h  filestest.h  framebuffertest.h  imagestest.h  keyboardtest.h  linestest.h  mousetest.h  test.h  texttest.h  torrijotest.h  transformationstest.h
torrijas-test/source/: actionstest.cpp  boundingboxtest.cpp  eyesbenchmark.cpp  filestest.cpp  framebuffertest.cpp  imagestest.cpp  keyboardtest.cpp  linestest.cpp  main.cpp  mousetest.cpp  test.cpp  texttest.cpp  torrijotest.cpp  transformationstest.cpp
torrijas/include/: trjaction.h  trjapplication.h  trjapplicationconfig.h  trjarcshape.h  trjboxgradientpen.h  trjcallbackaction.h  trjcolor.h  trjcolorpen.h  trjcommon.h  trjconfig.h  trjdebug.h  trjellipseshape.h  trjexception.h  trjfile.h  trjfolder.h  trjfont.h  trjimage.h  trjimagedata.h  trjimagenode.h  trjimagepatternpen.h  trjkeyboard.h  trjlineargradientpen.h  trjlineshapes.h  trjmain.h  trjmouse.h  trjmoveaction.h  trjnode.h  trjoptional.h  trjpen.h  trjperfgraph.h  trjpoint.h  trjptr.h  trjradialgradientpen.h  trjrect.h  trjrectshape.h  trjrendercontext.h  trjrepeataction.h  trjrotateaction.h  trjscaleaction.h  trjsequenceaction.h  (+7 more)
torrijas/include/private/: trjdisplaylistmanager.h  trjimagemanager.h
torrijas/nanovg/example/: demo.c  example_gl2.c
torrijas/nanovg/src/: nanovg.c  nanovg.h  nanovg_gl.h
torrijas/source/: trjaction.cpp  trjapplication.cpp  trjcallbackaction.cpp  trjcolor.cpp  trjdebug.cpp  trjexception.cpp  trjfile.cpp  trjfont.cpp  trjimage.cpp  trjimagedata.cpp  trjimagenode.cpp  trjkeyboard.cpp  trjmouse.cpp  trjmoveaction.cpp  trjnode.cpp  trjpen.cpp  trjperfgraph.cpp  trjpoint.cpp  trjrect.cpp  trjrepeataction.cpp  trjrotateaction.cpp  trjscaleaction.cpp  trjsequenceaction.cpp  trjshape.cpp  trjshapegroup.cpp  trjsize.cpp  trjstring.cpp  trjtextnode.cpp  trjwaitaction.cpp
torrijas/source/private/: trjdisplaylistmanager.cpp  trjimagemanager.cpp
